--- a/score.css
+++ b/score.css
@@ -1,7 +1,7 @@
 main{
 	display: grid;
 	grid-template-rows: repeat(3, 1fr);
-    grid-template-columns: repeat(4, 200px);
+    grid-template-columns: repeat(4, 1fr);
 	grid-template-areas:
 		"m1 m2 m3 m4"
 		"m5 m6 m7 m8"
@@ -15,9 +15,9 @@ main{
 
 section{
 	position: relative;
-	min-height: 29vh;
 	/*padding: 20px;*/
-	
+	width: 200px;
+	height: 320px;
 }
 
 .front,
@@ -37,7 +37,7 @@ section{
 	flex-direction: column;
 	justify-content: space-around;
 	background-color: #fbe9d5;
-	border: .5vw solid #331d0e;
+	border: 8px solid #331d0e;
 	border-radius: 50px;
 	text-align: center;
 	
@@ -46,7 +46,7 @@ section{
 .back{
 	transform: perspective(600px) rotateY(0deg);
 	background-color: #fecd93;
-	border: .5vw solid #331d0e;
+	border: 8px solid #331d0e;
 }
 
 section:hover > .front{
@@ -79,9 +79,9 @@ section label{
 	position: absolute;
 	top: 0;
 	left: 0;
-	width:100%;
+	width: 100%;
 	height: 100%;
-	cursor: w-resize;
+	cursor: pointer;
 	z-index: 2;
 }
 
@@ -109,6 +109,9 @@ button{
 	border-radius: 50%;
 	width: 25px;
 	height: 25px;
+	color: #331d0e;
+	border-color: #331d0e;
+	background-color: inherit;
 }
 
 
@@ -123,7 +126,6 @@ button{
 			"m4 m5 m6"
 			"m7 m8 m9"
 			"m10 m11 m12";
-		gap: 40px;
 		
 		margin-left: 13%;
 
@@ -144,13 +146,10 @@ button{
 			"m7 m8"
 			"m9 m10"
 			"m11 m12";
-		gap: 40px;
 		
 		margin-left: 10%;
-		margin-top: 60px;
+		margin-top: 70px;
 	}
-	section{
-		min-height: 35vh;
-	}
+
 
 }
